did some code Clean up and fixed the out of bounce of the gunner enemy